solved the problem with changing drivers2

--- a/src/main/resources/templates/editDriver.html
+++ b/src/main/resources/templates/editDriver.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="ml-5 form-group row">
+        <div class="ml-5 form-group row mt-2">
             <label class="col-sm-4 col-form-label" for="username" th:utext="#{login}">Login</label>
             <div class="col-sm-5">
                 <input type="text" class="form-control" th:field="*{username}" id="username">
