--- a/src/main/resources/templates/statusCar.html
+++ b/src/main/resources/templates/statusCar.html
@@ -13,8 +13,8 @@
     .odd {background-color: #7FFFD4}
 </style>
 
-<div th:replace="trips :: navbar"></div>
-<div th:insert="trips :: header"></div>
+<div th:replace="blocks/navbar :: navbar"></div>
+<div th:insert="blocks/header :: header"></div>
 
 <div class="container-xxl p-2 text-center">
     <div class="row row-cols-auto justify-content-md-center">
