--- a/src/main/resources/templates/drivers.html
+++ b/src/main/resources/templates/drivers.html
@@ -13,8 +13,8 @@
     .even{background-color: #FFFACD}
     .odd{background-color: #7FFFD4}
 </style>
-<div th:replace="trips :: navbar"></div>
-<div th:insert="trips :: header"></div>
+<div th:replace="blocks/navbar :: navbar"></div>
+<div th:insert="blocks/header :: header"></div>
 
 <div class="container p-2">
     <a class="btn btn-success" sec:authorize="hasAnyAuthority('ROLE_DISPATCHER','ROLE_ADMIN')"
