--- a/src/main/resources/templates/editDriver.html
+++ b/src/main/resources/templates/editDriver.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<div th:replace="trips :: navbar"></div>
-<div th:insert="trips :: header"></div>
+<div th:replace="blocks/navbar :: navbar"></div>
+<div th:insert="blocks/header :: header"></div>
 
 <form th:action="@{/editDriver}" method="post" th:object="${driver}">
     <div class="container mt-5">
