--- a/src/main/resources/templates/editTrip.html
+++ b/src/main/resources/templates/editTrip.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-<div th:replace="trips :: navbar"></div>
-<div th:insert="trips :: header"></div>
+<div th:replace="blocks/navbar :: navbar"></div>
+<div th:insert="blocks/header :: header"></div>
 
 <form th:action="@{/editTrip}" method="post" th:object="${trip}">
     <div class="container mt-5">
