--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title th:utext="#{enter}">Enter</title>
     <style>
-        /* Bordered form */
+
 form {
   border: 3px solid #f1f1f1;
 }
 
-/* Full-width inputs */
 input[type=text], input[type=password] {
   width: 100%;
   padding: 12px 20px;
@@ -24,7 +21,6 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
 }
 
-/* Set a style for all buttons */
 button {
   background-color: #04AA6D;
   color: white;
@@ -36,19 +32,16 @@ button {
 
 }
 
-/* Add a hover effect for buttons */
 button:hover {
   opacity: 0.8;
 
 }
 
-/* Center the avatar image inside this container */
 .imgcontainer {
   text-align: center;
   margin: 5px 0 0 0;
 }
 
-/* Avatar image */
 img.avatar {
   width: 40%;
   border-radius: 30%;
@@ -80,7 +73,7 @@ border: 1px ;
 </head>
 <body>
 
-<div th:insert="trips :: header"></div>
+<div th:insert="blocks/header :: header"></div>
 
 <form class="selectLanguage">
     <a class="btn btn-warning" th:if="${#locale.toString() == 'ru_RU'}" href="?lang=en_En">English</a>
