--- a/src/main/resources/templates/registerDriver.html
+++ b/src/main/resources/templates/registerDriver.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-<div th:replace="trips :: navbar"></div>
-<div th:insert="trips :: header"></div>
+<div th:replace="blocks/navbar :: navbar"></div>
+<div th:insert="blocks/header :: header"></div>
 
 <form th:action="@{/driverRegister}" method="post" th:object="${driver}">
     <div class="container mt-5">
